# tinydict

./: Makefile.am  configure.ac  libtinydict.pc.in
debian/: changelog  control  libtinydict-dev.install
